fixed overflow bug

--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ body {font-size: 62.5%; font-family: Helvetica, sans-serif; }
 #tdddApp ul {/*border-right: 0.2em dashed yellow;*/}
 #tdddApp ul:last-child {border-right: none;}
 #tdddApp ul h2 {font-size: 2em; margin: 0.5em; text-align: center; /*font-variant: small-caps; */color:black;  font-family:"Delius Unicase","Permanent Marker", cursive;}
-#tdddApp ul li.sticky {position: relative; width: 10em; height: 10em; float: left; margin: 1em; padding: 0 0.6em 0.6em 0.6em; box-shadow: 2px 2px 7px rgba(33,33,33,.2);font-size: 1em;}
+#tdddApp ul li.sticky {position: relative; width: 10em; height: 10em; float: left; margin: 1em; padding: 0 0.6em 0.6em 0.6em; box-shadow: 2px 2px 7px rgba(33,33,33,.2);font-size: 1em;overflow-y:auto;overflow-x:hidden;}
 li.ui-state-highlight {position: relative; width: 10em; height: 10em; float: left; padding: 0.6em; font-size: 1em; margin:1em; border: 0.2em dashed rgb(128,153,182); }
 #todo-list, #doing-list, #done-list {width:33%; display: inline-block; float: left; min-height: 500px;}
 #tdddApp>ul>li:nth-child(even){-o-transform:rotate(4deg); -webkit-transform:rotate(4deg); -moz-transform:rotate(4deg); }
@@ -70,7 +70,7 @@ li.ui-state-highlight {position: relative; width: 10em; height: 10em; float: lef
 .color-picker li.pink{background-color: #ffb2b2;}
 .color-picker li.purple{background-color: #9bb6fe;}
 .color-picker li.grey{background-color: #dadada;}
-li.sticky textarea {width: 94%; height: 90%; margin-top:0.5em; border-color: #899BC1; resize:none; background-color: rgba(255,255,255,0.6);}
+li.sticky textarea {width: 94%; height: 88%; margin-top:0.5em; border-color: #899BC1; resize:none; background-color: rgba(255,255,255,0.6);}
 
 .sticky.yellow{background-color: #fef49c;}
 .sticky.blue{background-color: #adf4ff;}
